# tg-bot-service

./: pyproject.toml
src/filters/: approved.py
src/routers/: common.py
src/routers/callback_handlers/: change_profile_cb_handler.py  main_menu_cb_handler.py  payment_cb_handler.py  registration_cb_handler.py
src/routers/commands/: edit_profile_commands.py  menu_commands.py  start_commands.py
src/services/: gateway.py
src/utils/: access_data.py  exc_handler.py  timer.py
src/validators/: validators.py
